Configurare alias paths în TypeScript

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,6 +8,12 @@
     "types": ["vite/client"],
     "skipLibCheck": true,
 
+    /* 🔹 ALIAS PATHS */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
